External Login Using Google Authentication

--- a/appsettings.json
+++ b/appsettings.json
@@ -28,7 +28,14 @@
     "UseDefaultCredentials": false,
     "IsBodyHTML": true
   },
-
+  
+    "Authentication": {
+      "Google": {
+        "ClientId": "354359002824-kfugb423q0r16hphhq8v0b1pdqfcflf2.apps.googleusercontent.com",
+        "ClientSecret": "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"
+      }
+    },
+  
 
 
   "Stripe": {
