--- a/OrganicOption.csproj
+++ b/OrganicOption.csproj
@@ -16,6 +16,8 @@
 
   <ItemGroup>
 
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.0" />
+
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.0" />
     
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.0" />
