--- a/OrganicOption.csproj
+++ b/OrganicOption.csproj
@@ -22,6 +22,8 @@
     
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.0" />
     
+    <PackageReference Include="Microsoft.AspNetCore.Localization" Version="2.2.0" />
+    
     <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
     
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
@@ -40,6 +42,8 @@
     
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="6.0.0" />
     
+    <PackageReference Include="Microsoft.Extensions.Localization" Version="6.0.0" />
+    
     <PackageReference Include="Microsoft.IdentityModel.Validators" Version="7.4.1" />
     
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
@@ -54,7 +58,6 @@
     <Folder Include="Areas\Identity\Services\" />
     <Folder Include="Areas\Rider\Data\" />
     <Folder Include="Areas\Rider\Models\" />
-    <Folder Include="Controllers\" />
     <Folder Include="wwwroot\Image\" />
   </ItemGroup>
 
