Ui modification completed

--- a/OrganicOption.csproj
+++ b/OrganicOption.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <Content Remove="Areas\Admin\Views\Products\MyProduct.cshtml" />
+    <Content Remove="Areas\Admin\Views\Wallet\CardOrders.cshtml" />
     <Content Remove="Views\Shared\_DashboardLayout.cshtml" />
     <Content Remove="Views\Shared\_Layout1.cshtml" />
   </ItemGroup>
@@ -74,6 +75,7 @@
 
   <ItemGroup>
     <None Include="Areas\Admin\Views\Products\MyProduct.cshtml" />
+    <None Include="Areas\Admin\Views\Wallet\CardOrders.cshtml" />
     <None Include="Views\Shared\Extra\_Layout1.cshtml" />
     <None Include="wwwroot\leaf.ico" />
   </ItemGroup>
@@ -84,11 +86,16 @@
 
   <ItemGroup>
     <_ContentIncludedByDefault Remove="Areas\Admin\Views\Products\MyProduct.cshtml" />
+    <_ContentIncludedByDefault Remove="Areas\Admin\Views\Wallet\CardOrders.cshtml" />
     <_ContentIncludedByDefault Remove="Views\Shared\_Layout1.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
     <UpToDateCheckInput Remove="Views\Shared\_Layout1.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Areas\Admin\Views\Wallet\CardOrders.cshtml" />
   </ItemGroup>
 
 </Project>
